--- a/fuel-server/package.json
+++ b/fuel-server/package.json
@@ -9,6 +9,9 @@
   "author": "Joel Shepherd",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
-  }
+    "express": "^4.17.1",
+    "nodemon": "^2.0.12",
+    "unirest": "^0.6.0"
+  },
+  "proxy": "http://localhost:3000"
 }
