--- a/fuel-server/package.json
+++ b/fuel-server/package.json
@@ -10,8 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "nodemon": "^2.0.12",
-    "unirest": "^0.6.0"
+    "nodemon": "^2.0.12"
   },
   "proxy": "http://localhost:3000"
 }
