--- a/fuel-app/package.json
+++ b/fuel-app/package.json
@@ -11,6 +11,8 @@
     "react": "^17.0.2",
     "react-date-picker": "^8.3.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.1",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.2"
   },
